# RKYOLO-Edge

./: README.md  config.py  const.py  install.sh  main.py  nginx.conf  requirements.txt
src/: db.py  detector.py  file.py  hik.py  mqtt_heartbeat.py  utils.py  uvc.py  yolo.py  yolo_utils.py
src/letter_box_neon/: CMakeLists.txt  README.md  letter_box.cpp  test_letter_box_neon.py
